core/test/org.eclipse.vjet.test.core.jstojava/testFiles/org/eclipse/vjet/dsf/jst/validation/vjo/BugFixes/bad/Bug4668.js
vjo.ctype('org.eclipse.vjet.dsf.jst.validation.vjo.BugFixes.bad.Bug4668') //< public
.endType();